# massive

./: Cargo.toml  bash.sh  cache.py  config.py  config.toml  context.py  data.py  env_vars.py  main.py  requirements.txt  shell.sh  theme.py
plugins/: default.py
src/: context.rs  data.py  filesystem.rs  logger.rs  main.rs  prompt.py  prompt.rhai  prompt.rn  prompt_request.rs  server.rs  vm.rs
src/context/: cache.rs  context.rs  mod.rs
src/data/: hostname.rs  mod.rs  username.rs
