[package]
name = "massive"
version = "0.1.0"
edition = "2021"

[dependencies]
gethostname = "0.4.1"
log = "0.4.17"
pidlock = "0.1.4"

[dependencies.clap]
version = "4.2.1"
features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive", "wrap_help", "env"]

[dependencies.rune]
version = "0.12.3"

[dependencies.tokio]
version = "^1"
features = ["rt-multi-thread", "fs", "macros", "io-util", "signal", "sync", "time"]
